--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8088
+  port: 8005
 
 
 spring:
@@ -15,6 +15,13 @@ spring:
     show-sql: true
   main:
     allow-circular-references: true
+  data:
+    redis:
+      host: 121.187.22.37
+      password: mypassword
+    mongodb:
+      host: 121.187.22.37
+      password: mypassword!
 jwt:
   #HS512 알고리즘을 사용할 것이기 때문에 512bit, 즉 64byte 이상의 secret key를 사용해야 한다.
   #key size (512bit)
